--- a/diyetisyenproje.csproj
+++ b/diyetisyenproje.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\CurrentDiyetisyen.cs" />
+    <Compile Include="Classes\Insan.cs" />
+    <Compile Include="Classes\SecilenHastabilgileri.cs" />
     <Compile Include="Screens\AdminLogin.cs">
       <SubType>Form</SubType>
     </Compile>
