--- a/diyetisyenproje.csproj
+++ b/diyetisyenproje.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,6 +52,7 @@
     <Compile Include="Classes\CurrentDiyetisyen.cs" />
     <Compile Include="Classes\Insan.cs" />
     <Compile Include="Classes\SecilenHastabilgileri.cs" />
+    <Compile Include="Classes\JsonParser.cs" />
     <Compile Include="Screens\AdminLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +138,7 @@
     <EmbeddedResource Include="Screens\ShowRapor.resx">
       <DependentUpon>ShowRapor.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
